scribble-test/src/test/resources/bad/safety/stuckmsg/threeparty/Test01.scr
module bad.safety.stuckmsg.threeparty.Test01;


// Cf. good.wfchoice.gchoice.Choice11;
global protocol Proto1(role A, role B, role C)
{
	rec X
	{
		2() from A to B;  // bad safety
		choice at A
		{
			1() from A to C;
			continue X;
		}
		or
		{
			2() from A to B;
			2() from A to C;
		}
	}
}


